--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="center">
-        <img id="logo" src="images/logo.png" alt="A resource for the Henry Miller Memorial Library" width="600">
+        <img id="logo" src="logo.png" alt="A resource for the Henry Miller Memorial Library" width="600">
         <h1>Where Nothing Happens</h1>
         <h2> Big Sur, California</h2>
         <p> founded by Emil White</p>
